bk_ida/gobmkida/c1/count_common_libs
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/count_common_libs/src/engine/board.c:2486:4: error: use of undeclared identifier 'byte_9AA89F'
|| byte_9AA89F[v24] == v21 && string[239].neighborlist[v24 + 160] == string_number[v4] 
   ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/count_common_libs/src/engine/board.c:2487:4: error: use of undeclared identifier 'byte_9AA88C'
|| byte_9AA88C[v24] == v21 && string[239].neighborlist[v24 + 141] == string_number[v4] 
   ^
2 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/count_common_libs/src/obj/1/board.o] Error 1
